storage: support for Swift object storage
Make swift restore fully functional minus issue with large files.

Apparently the swift connection object in the Python swiftclient does not
directly support transferring files to disk, though the swiftclient service
seems to.  We probably need to fix this to make large basebackup restoral
from Swift possible.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO
 ====
 
+* swift download support for large files
 * configurable recovery target recovery.conf (to be created by restore)
 * recovery_command support
 * SSL support for Webserver
